2005-10-01  Simon Josefsson  <jas@extundo.com>

	* getaddrinfo.h: Protect #include's of sys/socket.h and netdb.h.
	Only define struct addrinfo if !HAVE_STRUCT_ADDRINFO.  Protect
	AI_* and EAI_* definitions.  Protect function declarations.

2005-09-29  Paul Eggert  <eggert@cs.ucla.edu>

	* openat.c (fdopendir): Do not define if HAVE_FDOPENDIR.
	Remove AT_FDCWD test.
	Do not consume the fd unless successful.
	* openat.h (fdopendir): Do not define if HAVE_FDOPENDIR.

2005-09-29  Paul Eggert  <eggert@cs.ucla.edu>

	* xtime.h (XTIME_PRECISION): Now of type int, not long long int,
	so that the code works even with ancient cpp.  Portability problem
	with GCC 2.7.2.1 reported by Thomas M.Ott.

	* settime.c (settime): Fix { typo in previous patch.  Also, don't
	bother returning ENOSYS if settimeofday or stime fails; just let
	them return whatever errno they want to return.

2005-09-29  Jim Meyering  <jim@meyering.net>

	* settime.c (settime): Move the HAVE_STIME block `up' into an #elif
	block, so that we don't even try to compile it if settimeofday is
	available.  This works around a compilation failure on OSF1 V5.1,
	due to stime requiring a `long int*' while tv_sec is `int'.

2005-09-27  Jim Meyering  <jim@meyering.net>

	* fprintftime.c [HAVE_CONFIG_H]: Include <config.h> conditionally,
	to be consistent with gnulib.
	* getcwd.c: Change #ifdef<TAB>HAVE_CONFIG_H to #ifdef HAVE_CONFIG_H.
	* fts-cycle.c [HAVE_CONFIG_H]: Include <config.h>.
	* strnumcmp.c [HAVE_CONFIG_H]: Include <config.h> here, now that
	strnumcmp-in.h no longer includes it.

2005-09-26  Paul Eggert  <eggert@cs.ucla.edu>

	* utimens.c: Include unistd.h, for dup2.
	(futimens): Fix typo: HAVE_FUTIMESAT was misspelled in an #if.
	(futimens) [! HAVE_FUTIMESAT]: If !file, set errno before returning -1.

2005-09-25  Jim Meyering  <jim@meyering.net>

	* strnumcmp-in.h: Protect against multiple inclusion.

2005-09-24  Paul Eggert  <eggert@cs.ucla.edu>

	* utimens.c (ENOSYS): Define if not already defined.